# music-venue-booking

./: docker-compose.yaml  pyproject.toml  readme.md
mv_booking/: manage.py
mv_booking/booking/: admin.py  models.py  schemas.py  serializers.py  urls.py  views.py
mv_booking/booking/migrations/: 0001_initial.py  0002_alter_booking_end_time_alter_booking_start_time.py
mv_booking/mv_booking/: asgi.py  settings.py  urls.py  wsgi.py
mv_booking/venues/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
mv_booking/venues/migrations/: 0001_initial.py
